<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 Kyle Barlow.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Kyle Barlow - initial API and implementation
-->
<resources>
    <string name="hello">Tap the \&quot;Chirp!\&quot; button each time you hear a cricket chirp. After enough taps, the estimated temperature will be displayed.</string>
    <string name="app_name">CricketTherm</string>
    <string name="chirpbutton">Chirp!</string>
    <string name="temperature_not_ready">N/A</string>
    <string name="resetbutton">Reset</string>
    <string name="temperature">Temperature:</string>
    <string name="chirps">Chirps:</string>
    <string name="seconds">Seconds:</string>
    <string name="not_applicable">N/A</string>
    <string name="options">Options</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="exit">Exit</string>
    <string name="degf">°F</string>
    <string name="degc">°C</string>
    <string name="shareddatabox">Check to enable sharing of logged cricket chirp data (for science!). No personally identifiable data is shared.</string>
    <string name="firstlaunchtitle">Data sharing</string>
    <string name="firstlaunchmessage">Would you like to enable sharing of logged cricket chirp data with the developer of this application? No personally identifiable information will be shared. The data will be used for scientific research and to improve the accuracy of the cricket chirps to temperature conversion. This option can be changed later in the options menu.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_delete">Delete</string>
    <string name="nodata">No data available</string>
    <string name="notavailable">Not available</string>
    <string name="loggertitle">Data logger</string>
    <string name="logger">Logger</string>
    <string name="viewer">Data Viewer</string>
    <string name="datalogged">Data logged</string>
    <string name="logger_crickettemp">Cricket estimated temperature:</string>
    <string name="logger_logit">Log Data</string>
    <string name="logger_weathertemp">Real temperature:</string>
    <string name="logger_manreport">Manually reported temperature (optional):</string>
    <string name="delaytoolong">Interval between chirps too long! Resetting&#8230;</string>
	<string name="tempnotready">Logging can only be performed when enough chirps have been recorded to produce an estimated temperature</string>
	<string name="datum_crickettemp">Cricket temp:</string>
	<string name="datum_weathertemp">Real temp:</string>
	<string name="datum_condition">Condition:</string>
	<string name="datum_humidity">Humidity:</string>
	<string name="datum_windcondition">Wind condition:</string>
	<string name="datum_latitude">Latitude:</string>
	<string name="datum_longitude">Longitude:</string>
	<string name="datum_timestamp">Timestamp:</string>
	<string name="datum_serversync">Server synced:</string>
	<string name="datum_manualtemp">Manual temp:</string>
	<string name="numbersynced"> data entries were successfully synced to the server</string>
	<string name="versionname">0.93</string>
	<string name="version">App Version:</string>
	<string name="logo_description">wunderground.com</string>
</resources>
