<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 Kyle Barlow.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Kyle Barlow - initial API and implementation
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="2">

    <TableRow>
        <TextView
            android:id="@+id/datum_crickettemp"
            android:layout_column="1"
            android:text="@string/datum_crickettemp"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_crickettempd"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar0"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>

    <TableRow>
        <TextView
            android:id="@+id/datum_weathertemp"
            android:layout_column="1"
            android:text="@string/datum_weathertemp"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_weathertempd"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar1"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_condition"
            android:layout_column="1"
            android:text="@string/datum_condition"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_conditiond"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar2"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_humidity"
            android:layout_column="1"
            android:text="@string/datum_humidity"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_humidityd"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar3"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_windcondition"
            android:layout_column="1"
            android:text="@string/datum_windcondition"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_windconditiond"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar4"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_latitude"
            android:layout_column="1"
            android:text="@string/datum_latitude"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_latituded"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar5"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_longitude"
            android:layout_column="1"
            android:text="@string/datum_longitude"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_longituded"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar6"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_timestamp"
            android:layout_column="1"
            android:text="@string/datum_timestamp"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_timestampd"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
        <View
        	android:id="@+id/datum_bar7"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_serversync"
            android:layout_column="1"
            android:text="@string/datum_serversync"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_serversyncd"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
            <View
        	android:id="@+id/datum_bar8"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_manualtemp"
            android:layout_column="1"
            android:text="@string/datum_manualtemp"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_manualtempd"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar9"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_numchirps"
            android:layout_column="1"
            android:text="@string/chirps"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_numchirpsd"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    <View
        	android:id="@+id/datum_bar10"
        	android:layout_width="fill_parent"
        	android:layout_height="2dip"
        	android:background="@color/green"/>
    
    <TableRow>
        <TextView
            android:id="@+id/datum_numsecs"
            android:layout_column="1"
            android:text="@string/seconds"
            android:padding="3dip"
            android:gravity="right" />
        <TextView
            android:id="@+id/datum_numsecsd"
            android:layout_column="2"
            android:text="@string/not_applicable"
            android:gravity="left"
            android:padding="3dip" />
    </TableRow>
    
    
</TableLayout>
