<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/temperatureunits"
            android:textColor="@color/darkgreen"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <RadioGroup
            android:id="@+id/optionmenu_radiosTempSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optionmenu_cbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius" />
        
        <RadioButton
            android:id="@+id/optionmenu_fbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit" />
        
        </RadioGroup>

        <Button
            android:id="@+id/optionmenu_exitbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/optionmenu_radiosTempSelect"
            android:text="@string/exit" />

    </RelativeLayout>
